# datingWeb

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  CLAUDE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7821e7cf1e9e_add_terms_agreed_at_to_users.py  8ed1fb6913e1_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  game.py  me.py  reports.py  router.py  verification.py
backend/app/core/: deps.py  security.py
backend/app/models/: __init__.py  game.py  match.py  report.py  survey.py  user.py  verification.py
backend/app/schemas/: auth.py  game.py  report.py  survey.py  user.py  verification.py
backend/tests/: conftest.py  test_auth.py  test_game.py  test_me.py  test_profile_photo.py  test_reports.py  test_security.py  test_survey.py  test_verification.py  test_withdraw.py
docs/superpowers/: DEFERRED.md  PROGRESS.md  RESUME-game-frontend.md  RESUME-verification-frontend.md
docs/superpowers/plans/: 2026-05-25-backend-foundation.md  2026-06-09-game-endpoints.md  2026-06-13-frontend-auth.md  2026-06-20-mypage-profile.md  2026-06-29-game-frontend.md  2026-07-06-verification-upload-frontend.md  2026-07-10-verification-image-privacy.md  2026-07-13-admin-verification-review.md  2026-07-17-signup-consent.md
docs/superpowers/specs/: 2026-05-23-datedrop-korea-design.md  2026-06-13-frontend-auth-design.md  (+7 more)
frontend/: CLAUDE.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/lib/: api.ts  (+4 more)
frontend/tests/: api.test.ts  auth.test.tsx  routing.test.ts
(+48 files in other folders)
